@@ -94,8 +94,5 @@ else {
   die("Sessions are not enabled properly on this system.  zenTrack is exiting.");
 }
 
-//header("Cache-Control: no-cache, must-revalidate"); // HTTP/1.1
-//header("Expires: Mon, 26 Jul 1997 05:00:00 GMT"); // Date in the past
-
 // you can't have any spaces after this closing tag!
 ?>
